# cmake-cookbook

./: README.md
recipe-01/: CMakeLists.txt  README.md  main.cpp
recipe-02/: CMakeLists.txt  README.md
recipe-03/: CMakeLists.txt  README.md  foo.cpp  foo.hpp  main.cpp
recipe-04/: CMakeLists.txt  README.md  main.c
recipe-05/: CMakeLists.txt  README.md
recipe-06/: CMakeLists.txt  README.md  main.cpp
recipe-07/: CMakeLists.txt  README.md  config.h.in  main.cpp
recipe-08/: CMakeLists.txt  README.md
recipe-09/: CMakeLists.txt  README.md  main.cpp
recipe-10/: CMakeLists.txt  README.md  main.cpp
recipe-11/: CMakeLists.txt  README.md  main.cpp  main_test.py  main_test.sh  max.cpp  max_test.cpp
recipe-12/: CMakeLists.txt  README.md  main.cpp  sum.cpp  sum_test.cpp
